# Computer-Graphics-Labs

./: .gitignore  CMakeLists.txt  README.md
Buil/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Computer_Graphics_Labs.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  Lab01_Intro_to_c++.vcxproj  Lab01_Intro_to_c++.vcxproj.filters  Lab02_Basic_shapes.vcxproj  Lab02_Basic_shapes.vcxproj.filters  Lab03_Textures.vcxproj  Lab03_Textures.vcxproj.filters  Lab04_Vectors_and_matrices.vcxproj  Lab04_Vectors_and_matrices.vcxproj.filters  Lab05_Transformations.vcxproj  Lab05_Transformations.vcxproj.filters  Lab06_3D_worlds.vcxproj  Lab06_3D_worlds.vcxproj.filters  Lab07_Moving_the_camera.vcxproj  Lab07_Moving_the_camera.vcxproj.filters  Lab08_Lighting.vcxproj  Lab08_Lighting.vcxproj.filters  Lab09_Normal_maps.vcxproj  Lab09_Normal_maps.vcxproj.filters  Lab10_Quaternions.vcxproj  Lab10_Quaternions.vcxproj.filters  MultipleLightFragmentsShader.glsl  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  launch-Lab02_Basic_shapes-Debug.cmd  launch-Lab02_Basic_shapes-MinSizeRel.cmd  launch-Lab02_Basic_shapes-RelWithDebInfo.cmd  launch-Lab02_Basic_shapes-Release.cmd  launch-Lab03_Textures-Debug.cmd  launch-Lab03_Textures-MinSizeRel.cmd  launch-Lab03_Textures-Release.cmd  launch-Lab04_Vectors_and_matrices-MinSizeRel.cmd  launch-Lab04_Vectors_and_matrices-Release.cmd  launch-Lab05_Transformations-Debug.cmd  (+8 more)
Buil/Lab09_Normal_maps.dir/Debug/: Lab09_Normal_maps.exe.recipe
Buil/Lab09_Normal_maps.dir/Debug/Lab09_No.F3EB063F.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Buil/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
Final coursework/: Final coursework.csproj
Lab01_Intro_to_c++/: Car.cpp  Car.hpp  Lab01_Intro_to_c++.cpp
Lab02_Basic_shapes/: Lab02_Basic_shapes  Lab02_Basic_shapes.cpp  fragmentShader.glsl  vertexShader.glsl
Lab03_Textures/: Lab03_Textures  Lab03_Textures.cpp  fragmentShader.glsl  vertexShader.glsl
Lab04_Vectors_and_matrices/: Lab04_Vectors_and_matrices  Lab04_Vectors_and_matrices.cpp
Lab05_Transformations/: Lab05_Transformations  Lab05_Transformations.cpp  maths.cpp  vertexShader.glsl
Lab06_3D_worlds/: Lab06_3D_worlds  Lab06_3D_worlds.cpp  vertexShader.glsl
Lab07_Moving_the_camera/: Lab07_Moving_the_camera  Lab07_Moving_the_camera.cpp  fragmentShader.glsl  vertexShader.glsl
Lab08_Lighting/: Lab08_Lighting  Lab08_Lighting-ASN-STU7520.cpp  Lab08_Lighting.cpp  fragmentShader-ASN-STU7520.glsl  fragmentShader.glsl  lightFragmentShader.glsl  lightVertexShader.glsl  multipleLightsFragmentShader.glsl  vertexShader-ASN-STU7520.glsl  vertexShader.glsl
Lab09_Normal_maps/: Lab09_Normal_maps  Lab09_Normal_maps-ASN-STU7485.cpp  Lab09_Normal_maps.cpp  fragmentShader.glsl  lightVertexShader.glsl  vertexShader.glsl
Lab10_Quaternions/: Lab10_Quaternions  Lab10_Quaternions.cpp  fragmentShader.glsl  vertexShader.glsl
common/: camera.cpp  camera.hpp  light.cpp  light.hpp  maths.cpp  maths.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.hpp  texture.hpp
